--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.9",
+    "axios": "^1.10.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.477.0",
     "postcss": "^8.5.3",
