--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/postcss": "^4.0.9",
     "axios": "^1.10.0",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
