--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/postcss": "^4.0.9",
     "axios": "^1.10.0",
@@ -18,8 +19,10 @@
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
